5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1724_2519.log
== TEST (2019-05-14 18:19:59) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 

while(subida < at):
	subida = subida + dp
	minu = minu + 1
	print(minu)
	subida = subida - dr
-- ERROR:
File "XXXX", line 6
    minu = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:20:23) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 0

while(subida < at):
	subida = subida + dp
	minu = minu + 1
	print(minu)
	subida = subida - dr
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:21:04) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 0

while(subida < at):
	subida = subida + dp
	minu = minu + 1
	print(minu - 1)
	subida = subida - dr
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:23:11) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 0

while(subida < at):
	subida = subida + dp
	minu = minu + 1
	subida = subida - dr

print(minu - 1)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:25:31) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 0

while(subida < at):
	subida = subida + dp
	minu = minu + 1
	subida = subida - dr

print(minu - 1)
-- EXECUTION TIME:
0.135394
-- TEST CASE 1:
---- input:
15
2
1
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
15
3
1
---- correct output:
7
---- user output:
7
-- TEST CASE 3:
---- input:
66
56
23

---- correct output:
2
---- user output:
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:26:22) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 0

while(subida <= at):
	subida = subida + dp
	minu = minu + 1
	subida = subida - dr

print(minu)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:26:54) 
-- CODE:
at = int(input("Altura total: "))
dp = int(input("Distancia percorrida por min: "))
dr = int(input("Distancia regredida por min: "))

subida = 0
minu = 0

while(subida < at):
	subida = subida + dp
	minu = minu + 1
	subida = subida - dr

print(minu)
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
